[package]
name = "sockonsole"
version = "0.1.0"
edition = "2021"
description = "Sockonsole is a basic utility to be used for running something like a shell in the background, and be able to connect and interact with it whenever you want, through unix sockets."
licence-file = "LICENCE.md"
documentation = "README.md"
repository = "https://github.com/Robert4S/sockonsole"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
rustyline = "15.0.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
